tests/compile_fail/unknown_field_attr.stderr
error: unknown angelscript field attribute: unknown_field_attr
 --> tests/compile_fail/unknown_field_attr.rs:7:19
  |
7 |     #[angelscript(unknown_field_attr)]
  |                   ^^^^^^^^^^^^^^^^^^
